# OhBoy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/include/: cartridge.h  joypad.h  logger.h  memory.h  scheduler.h
core/src/: apu.cpp  cartridge.cpp  cpu.cpp  dma.cpp  joypad.cpp  logger.cpp  mbc.cpp  memory.cpp  opcode.cpp  ppu.cpp  scheduler.cpp
debugger/: CMakeLists.txt  debugger.cpp  debugger.h  main.cpp
debugger/gui/: Cargo.toml
debugger/gui/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
include/: apu.h  cartridge.h  config.h  cpu.h  debugger.h  dma.h  hdma.h  interrupt.h  interrupts.h  joypad.h  logger.h  mbc.h  mbc1.h  mbc3.h  mbc5.h  memory.h  ppu.h  scheduler.h  timer.h  types.h  util.h
lib/: debugger.cpp  util.cpp
src/: apu.cpp  cartridge.cpp  cpu.cpp  debugger.cpp  dma.cpp  hdma.cpp  interrupt.cpp  interrupts.cpp  joypad.cpp  logger.cpp  main.cpp  mbc.cpp  mbc1.cpp  mbc3.cpp  mbc5.cpp  memory.cpp  opcode.cpp  opcode_prefixed.cpp  ppu.cpp  scheduler.cpp  timer.cpp  util.cpp
tools/: generate.py
